<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSH_server</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip">Address:</string>
    <string name="port">Port:</string>
    <string name="status">status:</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="setting">SETTINGS</string>
    <string name="title_activity_options">Options</string>
	<string name="password">Password:</string>
	<string name="port_no">Port:</string>
	<string name="addr">root@10.0.1.15</string>
	<string name="save">Save</string>
	<string name="back">Back</string>
</resources>
